[metadata]
name = aiologic
version = 0.2.0
author = Ilya Egorov
author_email = 0x42005e1f@gmail.com
description = GIL-powered* locking library for Python
long_description = file: README.rst
url = https://github.com/x42005e1f/aiologic
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: ISC License (ISCL)
    Intended Audience :: Developers
    Framework :: AsyncIO
    Framework :: Trio
    Framework :: AnyIO
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent

[options]
python_requires =
    >=3.8
setup_requires =
    wheel>=0.31.0
    setuptools>=40.8.0

[options.extras_require]
trio = trio>=0.23.0
anyio = anyio>=3.0.0
gevent = gevent>=21.1.0
sniffio = sniffio>=1.3.0
eventlet = eventlet>=0.15.1
